cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(point_normals)
find_package(PCL 1.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(point_normals src/point_normals.cpp)
target_link_libraries(point_normals ${PCL_LIBRARIES})